fixed a css rendering issue for videos on firefox

--- a/main.css
+++ b/main.css
@@ -61,11 +61,14 @@ body {
 .video-div {
     height: 60%;
     width: 100%;
+    overflow: hidden;
 }
 
 .vid-iframe {
     height: 100%;
     width: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .video-info {
